# haskell_HW

./: README.md
01delimcc/: Eval.hs  Main.hs  Makefile  Parser.hs  README.md  delimccDemo.cabal  stack.yaml
LambdaEvaluator/: LambdaEval.hs
delimcc/: ChangeLog.md  README.md  delimcc.cabal  package.yaml
delimcc/app/: Main.hs
delimcc/src/: Eval.hs  Parser.hs
delimcc/test/: Spec.hs
