name:                delimccDemo
version:             0.1.0.0
description:         Super cool mega lambdas
--license:             GPL
--license-file:        LICENSE
--maintainer:          dons@cse.unsw.edu.au
build-type:          Simple
cabal-version:       >=1.10
 
executable demo1
  main-is:           Main.hs 
  build-depends:     base >=4.8, parsec
  ghc-options:       -Wall
  default-language:  Haskell2010
  other-modules:     Parser, Eval


test-suite tests
  ghc-options:         -Wall -Wno-missing-signatures
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  main-is:             HSpecTests.hs
  build-depends:       base, parsec, tasty, tasty-hunit, hspec                >= 1.8
  default-language:    Haskell2010
  other-modules:       Parser, Eval

